<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray100"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/saveInformation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_primary"
        android:text="@string/saveInformation"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/saveInformation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appName"
                android:layout_width="match_parent"
                android:layout_height="56sp"
                android:background="@drawable/background_button_primary"
                android:elevation="10dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:paddingLeft="23dp"
                android:text="@string/app_name"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView1"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginTop="100dp"
                android:src="@drawable/profile4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appName"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView1"
                tools:ignore="MissingConstraints"
                android:ems="10"
                android:gravity="center"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/background_button_primary"
                android:paddingStart="16sp"
                android:paddingEnd="16sp"
                android:text="@string/editProfile"
                android:textColor="@color/black"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name"
                tools:ignore="MissingConstraints"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button_secondary"
                android:paddingStart="16sp"
                android:paddingEnd="16sp"
                android:text="@string/viewWebsite"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button1"
                app:layout_constraintTop_toTopOf="@+id/button1"
                tools:ignore="MissingConstraints"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/skills"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/button1"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/androidDeveloper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/androidDevelopment"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/skills"
                tools:ignore="MissingConstraints"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/uiDesign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uiDesign"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/androidDeveloper"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/deepLeaning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deepLearning"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/uiDesign"
                tools:ignore="MissingConstraints"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/provinceCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/provinceCity"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/deepLeaning"
                tools:ignore="MissingConstraints" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/provinceCity"
                android:id="@+id/radioGroup">

                <RadioButton
                    android:id="@+id/gilanRasht"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gilanRasht"
                    app:layout_constraintStart_toStartOf="@id/guideline1"
                    app:layout_constraintTop_toBottomOf="@id/provinceCity"
                    tools:ignore="MissingConstraints" />

                <RadioButton
                    android:id="@+id/tehran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tehran"
                    app:layout_constraintStart_toStartOf="@id/guideline1"
                    app:layout_constraintTop_toBottomOf="@id/gilanRasht"
                    tools:ignore="MissingConstraints" />

                <RadioButton
                    android:id="@+id/alborzKaraj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alborzKaraj"
                    app:layout_constraintStart_toStartOf="@id/guideline1"
                    app:layout_constraintTop_toBottomOf="@id/tehran"
                    tools:ignore="MissingConstraints" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</RelativeLayout>